Avoid collection copying
Signed-off-by: Fabrice Bibonne <fabrice.bibonne@gmail.com>